connected frontend to backend API

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<div>
-  Angular app is working
+<div class="main-content">
+  <app-openlayers-map></app-openlayers-map>
+  <app-routes></app-routes>
 </div>
