added creating and updating routes

--- a/src/app/openlayers-map/openlayers-map.component.html
+++ b/src/app/openlayers-map/openlayers-map.component.html
@@ -1,3 +1,8 @@
+<div id="search-controls">
+    <input #addressInput type="text" placeholder="Enter address..." />
+    <button (click)="searchAddress(addressInput.value)">Search</button>
+</div>
+
 <!-- Map container -->
 <div #mapElement id="map"></div>
 
