--- a/src/app/routes/routes.component.html
+++ b/src/app/routes/routes.component.html
@@ -1,11 +1,22 @@
 <div class="routes-header"> Created Routes </div>
 <div *ngIf="routes && routes.length; else noRoutes">
-      <div *ngFor="let route of routes" 
-        class="route-name"
-        (click)="selectRoute(route)"
-        [ngClass]="{'selected': selectedRoute?.route_id === route.route_id}">
-        {{ route.name }}
-      </div>
+    <div *ngFor="let route of routes" style="display: grid; justify-content: start; grid-template-columns: auto auto; column-gap: 10px; margin: 10px;">
+        <div class="route-name" (click)="selectRoute(route)" [ngClass]="{'selected': selectedRoute?.route_id === route.route_id}">
+            {{ route.name }}
+        </div>
+        <div>
+            <button (click)="deleteRoute(route)" title="Delete Route">X</button>
+            <button *ngIf="routeEdited && selectedRoute == route "> Update Route </button>
+        </div>
+    </div>
+</div>
+
+<div>
+    <!-- Input for new route name -->
+    <input type="text" [(ngModel)]="newRouteName" placeholder="Enter new route name" />
+
+    <!-- Button to submit the new route -->
+    <button (click)="submitRoute()">Submit Route</button>
 </div>
 
 <app-waypoints [route]="selectedRoute" [waypoints]="waypoints"></app-waypoints>
