--- a/src/app/waypoints/waypoints.component.css
+++ b/src/app/waypoints/waypoints.component.css
@@ -1,3 +1,10 @@
 .content {
     margin-top: 5vh;
 }
+
+.waypoints-list {
+    display: grid; 
+    grid-template-columns: auto auto auto; 
+    gap: 3px; 
+    width: fit-content;
+}
