--- a/src/app/waypoints/waypoints.component.html
+++ b/src/app/waypoints/waypoints.component.html
@@ -2,16 +2,26 @@
     <div class="route-name">
         {{route?.name}}
     </div>
-    <div style="display: grid; grid-template-columns: auto auto; gap: 3px; width: fit-content;">
+    <div class="waypoints-list">
         <!-- Header row -->
         <div><strong>Latitude</strong></div>
         <div><strong>Longitude</strong></div>
-    
+        <div><strong>Offset</strong></div>
         <!-- Data rows -->
-        <ng-container *ngIf="waypoints.length > 0; else noWaypoints" >
-            <ng-container *ngFor="let waypoint of waypoints">
-                <div>{{ waypoint.latitude }}</div>
-                <div>{{ waypoint.longitude }}</div>
+        <ng-container class="waypoints-list" *ngIf="waypoints.length > 0; else noWaypoints" >
+            <ng-container *ngFor="let waypoint of waypoints; let i = index">
+                <input style="width: 100px; overflow-x: scroll;" value="{{ waypoint.latitude }}" [disabled]="!(mapDataService.routeBeingEdited$ | async)" >
+                <input style="width: 100px; overflow-x: hidden;" value="{{ waypoint.longitude }}" [disabled]="!(mapDataService.routeBeingEdited$ | async)">
+                <input 
+                id="heading-{{i}}" 
+                type="number" 
+                [disabled]="!allowEditing"
+                [(ngModel)]="waypoint.degrees_from_north"
+                [disabled]="!(mapDataService.routeBeingEdited$ | async)"
+                (ngModelChange)="mapDataService.updateWaypoints(this.waypoints)"
+                placeholder="Enter heading" 
+                min="0" max="360"
+                (change)="printWaypoint(waypoint)"/>
             </ng-container>
         </ng-container>
     </div>
