added live status page which shows current violations, still needs to show drone location

--- a/src/app/openlayers-map/openlayers-map.component.html
+++ b/src/app/openlayers-map/openlayers-map.component.html
@@ -4,7 +4,7 @@
 </div>
 
 <!-- Map container -->
-<div #mapElement id="map"></div>
+<div #mapElement id="map" [ngClass]="(liveStatusView ? 'live-status' : '')"></div>
 
 <!-- Controls for the map -->
 <div id="controls">
