--- a/src/app/openlayers-map/openlayers-map.component.html
+++ b/src/app/openlayers-map/openlayers-map.component.html
@@ -5,6 +5,10 @@
 
 <!-- Map container -->
 <div #mapElement id="map" [ngClass]="(liveStatusView ? 'live-status' : '')"></div>
+<div #popupElement id="popup" class="ol-popup">
+    <a href="#" id="popup-closer" class="ol-popup-closer" (click)="closePopup($event)"></a>
+    <div id="popup-content" [innerHTML]="popupContent"></div>
+</div>
 
 <!-- Controls for the map -->
 <div id="controls">
