--- a/src/app/openlayers-map/openlayers-map.component.css
+++ b/src/app/openlayers-map/openlayers-map.component.css
@@ -18,6 +18,12 @@
     max-width: 400px;
 }
 
+.live-status-toolbar {
+  display: flex;
+  column-gap: 5px;
+  align-items: center;
+}
+
 /* openlayers-map.component.css */
 .ol-popup {
     position: absolute;
@@ -65,4 +71,22 @@
   
   .ol-popup-closer:after {
     content: "✖";
+  }
+
+  .filter-controls {
+    background: rgba(255, 255, 255, 0.9);
+    padding: 3px;
+    border-radius: 4px;
+  }
+  
+  .violation-filter {
+    padding: 2px 3px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    font-size: 14px;
+    cursor: pointer;
+  }
+  
+  .violation-filter:hover {
+    border-color: #aaa;
   }
