add commented out maptiler url

--- a/src/app/openlayers-map/openlayers-map.component.html
+++ b/src/app/openlayers-map/openlayers-map.component.html
@@ -23,9 +23,8 @@
 
 <!-- Controls for the map -->
 <div id="controls">
-  <button (click)="finalizePath()">Finalize Path</button>
   <button (click)="clearPath()">Clear Path</button>
-  <button (click)="toggleBaseLayer()">Toggle Base Layer</button>
+  <button (click)="toggleBaseLayer()">Toggle Satellite Layer</button>
 </div>
 
 <!-- Display Waypoints -->
