selected route now persists across page reloads

--- a/src/app/openlayers-map/openlayers-map.component.css
+++ b/src/app/openlayers-map/openlayers-map.component.css
@@ -3,7 +3,9 @@
     height: 80vh;
     border: 2px solid black;
 } #map.live-status {
-    width: 100%;
+    width: 98%;
+    margin-left: auto;
+    margin-right: auto;
 }
   
 #controls {
