--- a/src/app/openlayers-map/openlayers-map.component.html
+++ b/src/app/openlayers-map/openlayers-map.component.html
@@ -16,7 +16,7 @@
 </div>
 <!-- Map container -->
 <div #mapElement id="map" [ngClass]="(liveStatusView ? 'live-status' : '')"></div>
-<div #popupElement id="popup" class="ol-popup">
+<div #popupElement id="popup" class="ol-popup" [hidden]="!liveStatusView">
     <a href="#" id="popup-closer" class="ol-popup-closer" (click)="closePopup($event)"></a>
     <div id="popup-content" [innerHTML]="popupContent"></div>
 </div>
