create new zones page

--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -16,5 +16,10 @@
             class="nav-link" 
             routerLink="/live-status" 
             (click)="pageLinks.LiveStatus"> {{pageLinks.LiveStatus}}</div>
+        <div 
+            class="nav-link" 
+            routerLink="/zones" 
+            (click)="pageLinks.Zones"> {{pageLinks.Zones}}
         </div>
+    </div>
 </div>
