change current view from boolean to enum

--- a/src/app/live-status/live-status.component.html
+++ b/src/app/live-status/live-status.component.html
@@ -1,4 +1,4 @@
 <div class="main-content">
     <h2 style="margin: 0;">Live Drone + Violation Status</h2>
-    <app-openlayers-map id="map" [liveStatusView]="true"></app-openlayers-map>
+    <app-openlayers-map id="map" [currentView]="MapView.LiveStatus"></app-openlayers-map>
 </div>
