basic zone creation with map, tested with backend integration to supabase

--- a/src/app/zone-planning/zone-planning.component.html
+++ b/src/app/zone-planning/zone-planning.component.html
@@ -1,4 +1,4 @@
 <div class="main-content">
-    <app-openlayers-map></app-openlayers-map>
+    <app-openlayers-map [currentView]="MapView.ZonePlanning"></app-openlayers-map>
     <app-zones></app-zones>
 </div>
