refactored top bar code for better expandability

--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,25 +1,12 @@
 <div class="main-content">
     <div class="nav-links">
-        <!-- <div *ngFor="let pageLink in pageLinks"
+        <div *ngFor="let page of pages | keyvalue: doNotSort"
             class="nav-link" 
-            routerLink="/route-planning" 
-            (click)="selectLink(pageLink)"> 
-            {{pageLink.value}} 
-        </div> -->
-        <div 
-            class="nav-link" 
-            routerLink="/route-planning" 
-            (click)="selectLink(pageLinks.RoutePlanning)"> 
-            {{pageLinks.RoutePlanning}} 
-        </div>
-        <div 
-            class="nav-link" 
-            routerLink="/live-status" 
-            (click)="pageLinks.LiveStatus"> {{pageLinks.LiveStatus}}</div>
-        <div 
-            class="nav-link" 
-            routerLink="/zones" 
-            (click)="pageLinks.Zones"> {{pageLinks.Zones}}
+            routerLink="{{ page.value.pageLink }}" 
+            (click)="selectLink(page.value.pageTitle)"
+            [ngClass]="(selectedLink == page.value.pageTitle ? 'selected' : '')"> 
+            {{page.value.pageTitle}} 
         </div>
     </div>
 </div>
+
