--- a/src/app/top-bar/top-bar.component.css
+++ b/src/app/top-bar/top-bar.component.css
@@ -15,4 +15,7 @@
 } .nav-link:hover {
     transition: transform 100ms;
     transform: scale(1.03);
+} .nav-link.selected {
+    transform: scale(1.05);
+    text-decoration: underline;
 }
