added zones to the route planning view

--- a/src/app/openlayers-map/openlayers-map.component.css
+++ b/src/app/openlayers-map/openlayers-map.component.css
@@ -92,3 +92,11 @@
   .violation-filter:hover {
     border-color: #aaa;
   }
+
+  .show-zones-controls {
+    border: 1px solid black;
+    border-radius: 5px;
+    width: fit-content;
+  } .show-zones-controls.show-zones {
+      background-color: gray;
+  }
