--- a/src/app/route-planning/route-planning.component.html
+++ b/src/app/route-planning/route-planning.component.html
@@ -1,4 +1,4 @@
 <div class="main-content">
-    <app-openlayers-map></app-openlayers-map>
+    <app-openlayers-map [currentView]="MapView.RoutePlanning"></app-openlayers-map>
     <app-routes></app-routes>
 </div>
