added deploy environment and connected it to ngrok backend

--- a/src/app/openlayers-map/openlayers-map.component.html
+++ b/src/app/openlayers-map/openlayers-map.component.html
@@ -4,6 +4,7 @@
       <button (click)="searchAddress(addressInput.value)">Search</button>
   </div>
   <div class="show-zones-controls" 
+    *ngIf="currentView == MapView.RoutePlanning"
     [ngClass]="showSpecialZones ? 'show-zones': ''"
     (click)="toggleShowSpecialZones()"
     >
