--- a/src/app/routes/routes.component.css
+++ b/src/app/routes/routes.component.css
@@ -13,4 +13,15 @@
 } .route-name.selected {
     background-color: gray;
     cursor: pointer;
+} 
+
+.waypoints-list {
+    display: grid; 
+    grid-template-columns: auto auto auto auto; 
+    gap: 3px; 
+    width: fit-content;
+}
+
+.waypoints {
+    margin-top: .3in;
 }
