--- a/src/app/openlayers-map/openlayers-map.component.html
+++ b/src/app/openlayers-map/openlayers-map.component.html
@@ -30,16 +30,7 @@
 
 <!-- Controls for the map -->
 <div id="controls">
-  <button (click)="clearPath()">Clear Path</button>
-  <button (click)="toggleBaseLayer()">Toggle Satellite Layer</button>
+  <!-- <button (click)="clearPath()">Clear Current Waypoints</button> -->
+  <button class="toggle-satellite" (click)="toggleBaseLayer()">Toggle Satellite Layer</button>
 </div>
 
-<!-- Display Waypoints -->
-<div id="waypoints">
-  <h3>Waypoints:</h3>
-  <ul>
-    <li *ngFor="let waypoint of waypoints; let i = index">
-      Waypoint {{ i + 1 }}: {{ waypoint.latitude | number:'1.6-6' }}, {{ waypoint.longitude | number:'1.6-6' }}
-    </li>
-  </ul>
-</div>
