--- a/src/app/routes/routes.component.html
+++ b/src/app/routes/routes.component.html
@@ -1,76 +1,92 @@
-<div class="routes-header"> Created Routes </div>
-<div *ngIf="routes && routes.length && !routeCreationView; else noRoutes">
-    <div *ngFor="let route of routes" style="display: grid; justify-content: start; grid-template-columns: auto auto auto; column-gap: 10px; margin: 10px;">
-        <div class="route-name" (click)="selectRoute(route)" [ngClass]="{'selected': selectedRoute?.route_id === route.route_id}">
-            {{ route.name }}
-        </div>
-        <div>
-            <button (click)="editRoute(route)" *ngIf="selectedRoute == route">Edit</button>
-            <button (click)="cancelEdit()" *ngIf="(mapDataService.routeBeingEdited$ | async) == route">Cancel</button>
-            <button (click)="saveRoute()" *ngIf="(mapDataService.routeBeingEdited$ | async) == route">Save</button>
-        </div>
-        <div>
-            <button (click)="deleteRoute(route)" title="Delete Route">X</button>
-        </div>
-    </div>
-</div>
-
-<div>
-    <!-- Input for new route name -->
-    
-    <!-- Button to submit the new route -->
-    <button (click)="onCreateRouteClick()" *ngIf="(mapDataService.routeBeingEdited$ | async) == null">Create Route</button>
-    <button (click)="selectPreviousRoute()" *ngIf="routeCreationView">Cancel</button>
-    
-    <div *ngIf="routeCreationView">
-        <input type="text" [(ngModel)]="newRouteName" placeholder="Enter new route name" />
-        <button (click)="submitRoute()">Submit Route</button>
-    </div>
-
-</div>
-
-<div class="waypoints">
-    <div class="route-name-waypoints">
-        Waypoints for route: <b>{{selectedRoute?.name}}</b>
-    </div>
-    <div class="waypoints-list">
-        <!-- Header row -->
-        <div>Latitude</div>
-        <div>Longitude</div>
-        <div>Offset</div>
-        <div></div>
-        <!-- Data rows -->
-        <ng-container class="waypoints-list" *ngIf="waypoints.length > 0; else noWaypoints" >
-            <ng-container *ngFor="let waypoint of waypoints; let i = index">
-                <input style="width: 100px; overflow-x: scroll;" value="{{ waypoint.latitude }}" [disabled]="!(mapDataService.routeBeingEdited$ | async)" >
-                <input style="width: 100px; overflow-x: hidden;" value="{{ waypoint.longitude }}" [disabled]="!(mapDataService.routeBeingEdited$ | async)">
-                <input 
-                id="heading-{{i}}" 
-                type="number" 
-                [disabled]="!mapDataService.allowRouteEditing"
-                [(ngModel)]="waypoint.degrees_from_north"
-                (ngModelChange)="bleh()"
-                placeholder="Enter heading" 
-                min="0" max="360"
+<div class="routes-content">
+    <div class="routes-header"> Created Routes </div>
+    <div *ngIf="routes && routes.length && !routeCreationView; else noRoutes">
+        <div class="routes-list">
+            <div *ngFor="let route of routes" 
+                class="route-row" 
+                [ngClass]="{'selected': selectedRoute?.route_id === route.route_id}"
                 >
+                <div class="route-name" (click)="selectRoute(route)" >
+                    {{ route.name }}
+                </div>
                 <div>
-                    <button
-                      (click)="removeWaypoint(i)"
-                      [disabled]="!(mapDataService.allowRouteEditing$ | async)"
-                      title="Remove this waypoint"
-                    >
-                      X
-                    </button>
-                  </div>
-            </ng-container>
-        </ng-container>
+                    <button (click)="editRoute(route)" *ngIf="selectedRoute == route">Edit</button>
+                </div>
+                <div>
+                    <button (click)="deleteRoute(route)" title="Delete Route">X</button>
+                </div>
+            </div>
+        </div>
+        <button class="cancel-edit" (click)="cancelEdit()" *ngIf="(mapDataService.routeBeingEdited$ | async)">Cancel</button>
+        <button class="save-edit" (click)="saveRoute()" *ngIf="(mapDataService.routeBeingEdited$ | async)">Save</button>
+    </div>
+
+    <div>
+        <!-- Input for new route name -->
+        
+        <!-- Button to submit the new route -->
+        <button class="create-route" (click)="onCreateRouteClick()" *ngIf="(mapDataService.routeBeingEdited$ | async) == null">Create Route</button>
+        <button class="cancel-create-route" (click)="selectPreviousRoute()" *ngIf="routeCreationView">Cancel</button>
+        
+        <div *ngIf="routeCreationView">
+            <input type="text" [(ngModel)]="newRouteName" placeholder="Enter new route name" />
+            <button class="submit-route" (click)="submitRoute()">Submit Route</button>
+        </div>
+
+    </div>
+
+    <div class="waypoints">
+        <div *ngIf="waypoints.length > 0; else noWaypoints">
+            <div class="route-name-waypoints">
+                Waypoints for route: <b>{{selectedRoute?.name}}</b>
+            </div>
+            <div class="waypoints-list modern-grid">
+                <!-- Header row -->
+                <div>Latitude</div>
+                <div>Longitude</div>
+                <div>Offset</div>
+                <div></div>
+                <!-- Data rows -->
+                <ng-container class="waypoints-list" >
+                    <ng-container *ngFor="let waypoint of waypoints; let i = index">
+                        <input style="width: 100px; overflow-x: scroll;" value="{{ waypoint.latitude }}" [disabled]="!(mapDataService.routeBeingEdited$ | async)" >
+                        <input style="width: 100px; overflow-x: hidden;" value="{{ waypoint.longitude }}" [disabled]="!(mapDataService.routeBeingEdited$ | async)">
+                        <input 
+                        id="heading-{{i}}" 
+                        type="number" 
+                        [disabled]="!mapDataService.allowRouteEditing"
+                        [(ngModel)]="waypoint.degrees_from_north"
+                        (ngModelChange)="updateWaypointData()"
+                        placeholder="Enter heading" 
+                        min="0" max="360"
+                        >
+                        <div>
+                            <button
+                            (click)="removeWaypoint(i)"
+                            [disabled]="!(mapDataService.allowRouteEditing$ | async)"
+                            title="Remove this waypoint"
+                            >
+                            X
+                            </button>
+                        </div>
+                    </ng-container>
+                </ng-container>
+            </div>
+        </div>
+        <div class="clear-current-waypoints">
+            <button (click)="clearCurrentWaypoints()" *ngIf="mapDataService.allowRouteEditing && this.waypoints.length > 0">Clear Waypoints</button>
+        </div>
     </div>
 </div>
+
 
 <ng-template #noWaypoints>
-    <div style="width: 100px;"> No waypoints for selected route </div>
+    <div> No waypoints for current route<span *ngIf="routeCreationView">, add some by clicking the map!</span> </div>
 </ng-template>
   
 <ng-template #noRoutes>
-    <p>No routes available.</p>
+    <div *ngIf="routeCreationView; else reallyNoRoutes"></div>
+    <ng-template #reallyNoRoutes>
+        <div>No routes available</div>
+    </ng-template>
 </ng-template>
