--- a/src/app/zones/zones.component.html
+++ b/src/app/zones/zones.component.html
@@ -1,6 +1,6 @@
 <div class="zones-header"> Created Zones </div>
 
-<div *ngIf="zones && zones.length; else noZones">
+<div class="zones-list" *ngIf="zones && zones.length; else noZones">
     <div *ngFor="let zone of zones" style="display: grid; justify-content: start; grid-template-columns: auto auto auto; column-gap: 10px; margin: 10px">
         <div (click)="selectZone(zone)" class="zone-name" [ngClass]="{'selected': selectedZone?.id === zone.id}">
             {{ zone.name }}
