--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,4 +1,5 @@
 <div class="main-content">
+    <div class="page-title">Drone Parking Patrol Management Interface</div>
     <div class="nav-links">
         <div *ngFor="let page of pages | keyvalue: doNotSort"
             class="nav-link" 
