--- a/src/app/routes/routes.component.html
+++ b/src/app/routes/routes.component.html
@@ -44,7 +44,7 @@
                 <!-- Header row -->
                 <div class="waypoints-list header">Latitude</div>
                 <div class="waypoints-list header">Longitude</div>
-                <div class="waypoints-list header">Offset</div>
+                <div class="waypoints-list header">Offset (°)</div>
                 <div></div>
                 <!-- Data rows -->
                 <ng-container class="waypoints-list" >
